--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -1,2 +1,8 @@
 button.sign_in=Sign in
 button.sign_up=Sign up
+home.welcome=Welcome!
+login.login_input=Enter your email
+login.login_label=Login
+login.password_input=Your password
+login.password_label=Password
+project.name=Student Project - Hotel booking
