localization + front end improvements. Removed order.jsp

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -5,4 +5,11 @@ login.login_input=Enter your email
 login.login_label=Login
 login.password_input=Your password
 login.password_label=Password
+button.logout=Logout
 project.name=Student Project - Hotel booking
+button.order_page=Book room
+home.bookTitle=Book now!
+order.form.beds.label=Number of beds in room
+order.form.class.label=Room class
+order.form.check_in.label=Check in date
+order.form.check_out.label=Check out date
