--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -1,3 +1,4 @@
+button.logout=Logout
 button.sign_in=Sign in
 button.sign_up=Sign up
 home.welcome=Welcome!
@@ -6,3 +7,9 @@ login.login_label=Login
 login.password_input=Your password
 login.password_label=Password
 project.name=Student Project - Hotel booking
+button.order_page=Book room
+home.bookTitle=Book now!
+order.form.beds.label=Number of beds in room
+order.form.class.label=Room class
+order.form.check_in.label=Check in date
+order.form.check_out.label=Check out date
