LoginController refactoring. Added error notification for sign in process

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -14,3 +14,5 @@ order.form.class.label=Room class
 order.form.check_in.label=Check in date
 order.form.check_out.label=Check out date
 statusbar.request.text=Request
+message.login.error=Login or password is incorrect
+message.login.success=Login success!
