Added more i18n. Page titles

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -16,3 +16,5 @@ order.form.check_out.label=Check out date
 statusbar.request.text=Request
 message.login.error=Login or password is incorrect
 message.login.success=Login success!
+page_title.index=Hotel Booking - Home Page
+page_title.registration=Registration
