--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -13,7 +13,7 @@ order.form.beds.label=Number of beds in room
 order.form.class.label=Room class
 order.form.check_in.label=Check in date
 order.form.check_out.label=Check out date
-statusbar.request.text=Request
+statusbar.request.text=New Requests
 message.login.error=Login or password is incorrect
 message.login.success=Login success!
 page_title.index=Hotel Booking - Home Page
