added request controller, request view page

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -18,3 +18,11 @@ message.login.error=Login or password is incorrect
 message.login.success=Login success!
 page_title.index=Hotel Booking - Home Page
 page_title.registration=Registration
+page_title.request.view=View request
+request.view.tablix.title=Request
+request.view.tablix.status=Status
+request.view.tablix.beds=Required beds
+request.view.tablix.class=Room class
+request.view.tablix.date_to=Check in date
+request.view.tablix.date_from=Check out date
+request.view.tablix.comments=Request comments
