--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -18,3 +18,11 @@ message.login.error=\u041b\u043e\u0433\u0438\u043d \u0438\u043b\u0438 \u043f\u04
 message.login.success=\u0412\u044b \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0437\u0430\u0448\u043b\u0438!
 page_title.index=\u0417\u0430\u043a\u0430\u0437 \u0433\u043e\u0441\u0442\u0438\u043d\u0438\u0446\u044b - \u0414\u043e\u043c\u0430\u0448\u043d\u044f\u044f \u0421\u0442\u0440\u0430\u043d\u0438\u0446\u0430
 page_title.registration=\u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044f
+page_title.request.view=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0437\u0430\u044f\u0432\u043a\u0438
+request.view.tablix.title=\u0417\u0430\u043a\u0430\u0437
+request.view.tablix.status=\u0421\u0442\u0430\u0442\u0443\u0441
+request.view.tablix.beds=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u043c\u0435\u0441\u0442
+request.view.tablix.class=\u041a\u043b\u0430\u0441\u0441 \u043d\u043e\u043c\u0435\u0440\u0430
+request.view.tablix.date_to=\u0414\u0430\u0442\u0430 \u0437\u0430\u0435\u0437\u0434\u0430
+request.view.tablix.date_from=\u0414\u0430\u0442\u0430 \u0432\u044b\u0435\u0437\u0434\u0430
+request.view.tablix.comments=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438 \u043a \u0437\u0430\u043a\u0430\u0437\u0443
