--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -26,3 +26,5 @@ request.view.tablix.class=Room class
 request.view.tablix.date_to=Check in date
 request.view.tablix.date_from=Check out date
 request.view.tablix.comments=Request comments
+button.back=Back
+button.edit=Edit
