--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -26,3 +26,5 @@ request.view.tablix.class=\u041a\u043b\u0430\u0441\u0441 \u043d\u043e\u043c\u043
 request.view.tablix.date_to=\u0414\u0430\u0442\u0430 \u0437\u0430\u0435\u0437\u0434\u0430
 request.view.tablix.date_from=\u0414\u0430\u0442\u0430 \u0432\u044b\u0435\u0437\u0434\u0430
 request.view.tablix.comments=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438 \u043a \u0437\u0430\u043a\u0430\u0437\u0443
+button.back=\u041d\u0430\u0437\u0430\u0434
+button.edit=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
