request controller refactoring. Added blank edit page

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -28,3 +28,4 @@ request.view.tablix.date_from=Check out date
 request.view.tablix.comments=Request comments
 button.back=Back
 button.edit=Edit
+page_title.request.edit=Request editing
