--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -29,3 +29,4 @@ request.view.tablix.comments=Request comments
 button.back=Back
 button.edit=Edit
 page_title.request.edit=Request editing
+button.save=Save
