--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -29,3 +29,4 @@ request.view.tablix.comments=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0
 button.back=\u041d\u0430\u0437\u0430\u0434
 button.edit=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
 page_title.request.edit=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u043d\u0438\u0435 \u0437\u0430\u044f\u0432\u043a\u0438
+date_pattern=dd.MM.yyyy
