--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -18,6 +18,17 @@ message.login.error=Login or password is incorrect
 message.login.success=Login success!
 page_title.index=Hotel Booking - Home Page
 page_title.registration=Registration
+
+adminPage.title = Administrator Page
+unhandledRequests.table=Unhandled Requests
+allRequests.table=All Requests
+beds=Beds
+stars=Stars
+checkInDate=Check-in date
+checkOutDate=Check-out date
+comment=Comment
+appointRoom_btn=Appoint Room
+
 page_title.request.view=View request
 request.view.tablix.title=Request
 request.view.tablix.status=Status
