--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -43,3 +43,10 @@ page_title.request.edit=Request editing
 button.save=Save
 date_pattern=MM.dd.yyyy
 button.delete=Delete
+
+appointRoom.title=Appoint Room
+order.table=Orders
+availableRooms.table=Available Rooms
+choose.row=Choose
+bill.button=Bill
+number=Number
