internalization to bill page added *.properties updated

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -50,3 +50,10 @@ availableRooms.table=Available Rooms
 choose.row=Choose
 bill.button=Bill
 number=Number
+
+billPage.title=Bill Page
+reqestsNumber=Request's #
+billsNumber=Bill's #
+roomsNumber=Room's #
+totalPrice=Total Price
+bakToOrderListBtn=Back to Order List
