--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -13,6 +13,7 @@ order.form.beds.label=Number of beds in room
 order.form.class.label=Room class
 order.form.check_in.label=Check in date
 order.form.check_out.label=Check out date
+order.form.comments=Comments
 statusbar.request.text=New Requests
 message.login.error=Login or password is incorrect
 message.login.success=Login success!
