--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -13,6 +13,7 @@ order.form.beds.label=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u04
 order.form.class.label=\u041a\u043b\u0430\u0441\u0441 \u043a\u043e\u043c\u043d\u0430\u0442\u044b
 order.form.check_in.label=\u0414\u0430\u0442\u0430 \u0437\u0430\u0435\u0437\u0434\u0430
 order.form.check_out.label=\u0414\u0430\u0442\u0430 \u0432\u044b\u0435\u0437\u0434\u0430
+order.form.comments=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438
 statusbar.request.text=\u041d\u043e\u0432\u044b\u0435 \u0437\u0430\u044f\u0432\u043a\u0438
 message.login.error=\u041b\u043e\u0433\u0438\u043d \u0438\u043b\u0438 \u043f\u0430\u0440\u043e\u043b\u044c \u043d\u0435\u0432\u0435\u0440\u043d\u044b
 message.login.success=\u0412\u044b \u0443\u0441\u043f\u0435\u0448\u043d\u043e \u0437\u0430\u0448\u043b\u0438!
