fixed Issue#24 reduced connection pool size to 2

--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -57,3 +57,6 @@ billsNumber=Bill's #
 roomsNumber=Room's #
 totalPrice=Total Price
 bakToOrderListBtn=Back to Order List
+request.view.status.new=New
+request.view.status.billed=Billed
+request.view.status.paid=Paid
