--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -57,3 +57,5 @@ billsNumber=Bill's #
 roomsNumber=Room's #
 totalPrice=Total Price
 bakToOrderListBtn=Back to Order List
+
+registration.successful.key=You have been successfully registered!
