--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -11,8 +11,8 @@ button.order_page=Book room
 home.bookTitle=Book now!
 order.form.beds.label=Number of beds in room
 order.form.class.label=Room class
-order.form.check_in.label=Check in date
-order.form.check_out.label=Check out date
+order.form.check_in.label=Check-in date
+order.form.check_out.label=Check-out date
 statusbar.request.text=New Requests
 message.login.error=Login or password is incorrect
 message.login.success=Login success!
@@ -62,3 +62,8 @@ registration.successful.key=You have been successfully registered!
 request.view.status.new=New
 request.view.status.billed=Billed
 request.view.status.paid=Paid
+
+first.name=First name
+last.name=Last name
+email=Email
+password.confirm=Password confirmation
