--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -62,3 +62,8 @@ registration.successful.key=\u0412\u044b \u0443\u0441\u043f\u0435\u0448\u043d\u0
 request.view.status.new=\u041d\u043e\u0432\u044b\u0439
 request.view.status.billed=\u0412\u044b\u0441\u0442\u0430\u0432\u043b\u0435\u043d \u0441\u0447\u0435\u0442
 request.view.status.paid=\u041e\u043f\u043b\u0430\u0447\u0435\u043d
+
+first.name=\u0418\u043c\u044f
+last.name=\u0424\u0430\u043c\u0438\u043b\u0438\u044f
+email=\u0410\u0434\u0440\u0435\u0441 \u044d\u043b\u0435\u043a\u0442\u0440\u043e\u043d\u043d\u043e\u0439 \u043f\u043e\u0447\u0442\u044b
+password.confirm=\u041f\u043e\u0434\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043d\u0438\u0435 \u043f\u0430\u0440\u043e\u043b\u044f
