--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -13,7 +13,10 @@ order.form.beds.label=Number of beds in room
 order.form.class.label=Room class
 order.form.check_in.label=Check in date
 order.form.check_out.label=Check out date
-order.form.comments=Comments
+order.form.comments.label=Comments
+order.form.pastdate.alert=Please, choose the dates not earlier than today.
+order.form.notvaliddates.alert=The date of check out should be after the date of check in.
+order.form.nodates.alert=Please, fill the dates.
 statusbar.request.text=New Requests
 message.login.error=Login or password is incorrect
 message.login.success=Login success!
