--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -2,6 +2,7 @@ button.logout=Logout
 button.sign_in=Sign in
 button.sign_up=Sign up
 home.welcome=Welcome!
+home.description=We are the best hotel on this street. We have rooms. And even rooms with beds. Sign up right now and welcome to our amazing apartments!
 login.login_input=Enter your email
 login.login_label=Login
 login.password_input=Your password
