--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -67,3 +67,5 @@ first.name=First name
 last.name=Last name
 email=Email
 password.confirm=Password confirmation
+
+home.page.text=We are glad to see you! This is our web hotel where you are able to book the best rooms you have ever, ever seen! Choose us, and you will not regret it!
