fixed Issue#22 Added table "My requests" on home page

--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -31,11 +31,11 @@ appointRoom_btn=Appoint Room
 
 page_title.request.view=View request
 request.view.tablix.title=Request
-request.view.tablix.status=Status
-request.view.tablix.beds=Required beds
-request.view.tablix.class=Room class
-request.view.tablix.date_to=Check in date
-request.view.tablix.date_from=Check out date
+request.tablix.status=Status
+request.tablix.beds=Required beds
+request.tablix.class=Room class
+request.tablix.date_to=Check in date
+request.tablix.date_from=Check out date
 request.view.tablix.comments=Request comments
 button.back=Back
 button.edit=Edit
@@ -62,3 +62,4 @@ registration.successful.key=You have been successfully registered!
 request.view.status.new=New
 request.view.status.billed=Billed
 request.view.status.paid=Paid
+home.my_requests.tablix.title=My requests
