--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -31,11 +31,11 @@ appointRoom_btn=\u041d\u0430\u0437\u043d\u0430\u0447\u0438\u0442\u044c \u043d\u0
 
 page_title.request.view=\u041f\u0440\u043e\u0441\u043c\u043e\u0442\u0440 \u0437\u0430\u044f\u0432\u043a\u0438
 request.view.tablix.title=\u0417\u0430\u043a\u0430\u0437
-request.view.tablix.status=\u0421\u0442\u0430\u0442\u0443\u0441
-request.view.tablix.beds=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u043c\u0435\u0441\u0442
-request.view.tablix.class=\u041a\u043b\u0430\u0441\u0441 \u043d\u043e\u043c\u0435\u0440\u0430
-request.view.tablix.date_to=\u0414\u0430\u0442\u0430 \u0437\u0430\u0435\u0437\u0434\u0430
-request.view.tablix.date_from=\u0414\u0430\u0442\u0430 \u0432\u044b\u0435\u0437\u0434\u0430
+request.tablix.status=\u0421\u0442\u0430\u0442\u0443\u0441
+request.tablix.beds=\u041a\u043e\u043b\u0438\u0447\u0435\u0441\u0442\u0432\u043e \u043c\u0435\u0441\u0442
+request.tablix.class=\u041a\u043b\u0430\u0441\u0441 \u043d\u043e\u043c\u0435\u0440\u0430
+request.tablix.date_to=\u0414\u0430\u0442\u0430 \u0437\u0430\u0435\u0437\u0434\u0430
+request.tablix.date_from=\u0414\u0430\u0442\u0430 \u0432\u044b\u0435\u0437\u0434\u0430
 request.view.tablix.comments=\u041a\u043e\u043c\u043c\u0435\u043d\u0442\u0430\u0440\u0438\u0438 \u043a \u0437\u0430\u043a\u0430\u0437\u0443
 button.back=\u041d\u0430\u0437\u0430\u0434
 button.edit=\u0420\u0435\u0434\u0430\u043a\u0442\u0438\u0440\u043e\u0432\u0430\u0442\u044c
@@ -62,3 +62,4 @@ registration.successful.key=\u0412\u044b \u0443\u0441\u043f\u0435\u0448\u043d\u0
 request.view.status.new=\u041d\u043e\u0432\u044b\u0439
 request.view.status.billed=\u0412\u044b\u0441\u0442\u0430\u0432\u043b\u0435\u043d \u0441\u0447\u0435\u0442
 request.view.status.paid=\u041e\u043f\u043b\u0430\u0447\u0435\u043d
+home.my_requests.tablix.title=\u041c\u043e\u0438 \u0437\u0430\u043a\u0430\u0437\u044b
