added RoomStatus Bean/DAO/Service adding room status on bill creation

--- a/src/main/resources/localization/locale_en.properties
+++ b/src/main/resources/localization/locale_en.properties
@@ -75,3 +75,4 @@ password.confirm=Password confirmation
 home.my_requests.tablix.title=My requests
 
 home.page.text=We are glad to see you! This is our web hotel where you are able to book the best rooms you have ever, ever seen! Choose us, and you will not regret it!
+button.bill=Open bill
